--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -1,1 +1,92 @@
-<app-header3></app-header3><section> <div class="esports-betting-main"> <div class="esports-betting-col1"> <h1>eSports Betting Software</h1> <p>At VRNL, we take pride in providing eSports fans with a unique and immersive experience. </p> <p style="padding-top: 2.25em;">VRNL is your gateway to a world where gaming and betting converge. Our eSports Betting Software is designed for gaming fans like you, providing an exciting, secure, and rewarding experience. Don't miss the chance to be part of the action. Join VRNL today and take your gaming experience to new heights!</p> <div class="esports-betting-col1-button"> <button class="button-design" routerLink="/contact">Start Now</button> </div> </div> <div class="esports-betting-col2"><img class="esport_img" src="assets/vrnl image 2.webp" alt="eSports Betting"> </div> </div></section><!-- ============================================================= --><section class="esport_section" style="padding-top: 7%;"> <div class="top-esports-main"> <div class="top-esports-col1"> <h2> <b>Top eSports titles </b></h2> <p>Counter-Strike: Global Offensive <br> Dota 2 <br> PUBG <br> CS2 <br> MDL Indonesia <br> Starcraft2 <br> Challenger cup</p> <p>Furthermore, in addition to the most popular titles, we also offer a wide range of common eSports genres through our feed:</p> <p><strong>Sports Games:</strong>EsportsBattle </p> <p><strong>Multiplayer Online titles like:</strong> Dota 2</p> <p><strong>First-Person Shooter FPS:</strong> CS:GO</p> <p><strong>Real-Time Strategy RTS:</strong> StarCraft II.</p> <p><strong>Battle Royale:</strong> PUBG</p> <p>In summary, our collection of titles and games is vast and continually expanding to keep your users engaged.</p> </div> <div class="top-esports-col2"> <div class="top-esports-col2-image"> <img class="esports_1" src="assets/Counter-Strike-Global-Offensive.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_2" src="assets/Dota-2-logo.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_3" src="assets/overwatch.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_4" src="assets/NBA2k.jpg.webp" alt="Top eSports titles"> </div > <div class="top-esports-col2-images"> <img class="esports_5" src="assets/Warcraft-III.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_6" src="assets/League-of-Legends.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_7" src="assets/Rocket-League.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_8" src="assets/Call-of-Duty-esports.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_9" src="assets/King-of-Glory.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_10" src="assets/Madden-NFL.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_11" src="assets/Rainbow-Six-Siege.png.webp" alt="Top eSports titles"> </div> <div class="top-esports-col2-images"> <img class="esports_12" src="assets/fortnite.png.webp" alt="Top eSports titles"> </div> </div> </div></section><section> <div class="easy-setup-main"> <div class="easy-setup-col1-photo"><img src="assets/VRNL 1-1_11zon.webp" alt="setup and creation of the online networks"> </div> <div class="easy-setup-col2"> <h3>Easy setup, less than you might imagine.</h3> <p>We can deliver the eSports platform in just a matter of weeks.<br> We handle all aspects of the process: Hosting, User Interface, odds feed, customized pages, product activation, and sportsbook strategy.</p> <p><strong>Your primary focus can be dedicated to setting up and establishing your online networks.</strong></p> </div> </div></section><section> <div class="esports-betting-middle-main"> <div class="esports-betting-middle-row1"> <div class="esport_bet_center"> <h2>If you're thinking about starting in online betting, our eSports betting software is a great first step.</h2> <p>Take advantage of our expert services and advanced eSports betting technology. Our regulated partners get full support to enter the online betting industry and can use our customized or generic platforms.</p> <p> Starting an online sportsbook that mainly focuses on eSports can be tough. That's why we've created a comprehensive eSports betting system with pre-match betting services. Our aim is to offer you the most extensive range of eSports options online.</p> </div> </div> <div class="esports-betting-middle-row2"><img class="all_images" src="assets/vrnl image 10_11zon.webp" alt="eSports Betting environmen"> </div> </div></section><app-footer></app-footer>
+<app-header3></app-header3>
+<section>
+    <div class="esports-betting-main">
+        <div class="esports-betting-col1">
+            <h1>eSports Betting Software</h1>
+            <p>At VRNL, we take pride in providing eSports fans with a unique and immersive experience. </p>
+            <p style="padding-top: 2.25em;">VRNL is your gateway to a world where gaming and betting converge. Our
+                eSports Betting Software is designed for gaming fans like you, providing an exciting, secure, and
+                rewarding experience. Don't miss the chance to be part of the action. Join VRNL today and take your
+                gaming experience to new heights!</p>
+            <div class="esports-betting-col1-button"> <button class="button-design" routerLink="/contact">Start
+                    Now</button> </div>
+        </div>
+        <div class="esports-betting-col2"><img class="esport_img" src="assets/vrnl image 2.webp" alt="eSports Betting">
+        </div>
+    </div>
+</section><!-- ============================================================= -->
+<!-- <section class="esport_section" style="padding-top: 7%;">
+    <div class="top-esports-main">
+        <div class="top-esports-col1">
+            <h2> <b>Top eSports titles </b></h2>
+            <p>Counter-Strike: Global Offensive <br> Dota 2 <br> PUBG <br> CS2 <br> MDL Indonesia <br> Starcraft2 <br>
+                Challenger cup</p>
+            <p>Furthermore, in addition to the most popular titles, we also offer a wide range of common eSports genres
+                through our feed:</p>
+            <p><strong>Sports Games:</strong>EsportsBattle </p>
+            <p><strong>Multiplayer Online titles like:</strong> Dota 2</p>
+            <p><strong>First-Person Shooter FPS:</strong> CS:GO</p>
+            <p><strong>Real-Time Strategy RTS:</strong> StarCraft II.</p>
+            <p><strong>Battle Royale:</strong> PUBG</p>
+            <p>In summary, our collection of titles and games is vast and continually expanding to keep your users
+                engaged.</p>
+        </div>
+        <div class="top-esports-col2">
+            <div class="top-esports-col2-image"> <img class="esports_1"
+                    src="assets/Counter-Strike-Global-Offensive.png.webp" alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_2" src="assets/Dota-2-logo.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_3" src="assets/overwatch.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_4" src="assets/NBA2k.jpg.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_5" src="assets/Warcraft-III.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_6" src="assets/League-of-Legends.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_7" src="assets/Rocket-League.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_8" src="assets/Call-of-Duty-esports.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_9" src="assets/King-of-Glory.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_10" src="assets/Madden-NFL.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_11" src="assets/Rainbow-Six-Siege.png.webp"
+                    alt="Top eSports titles"> </div>
+            <div class="top-esports-col2-images"> <img class="esports_12" src="assets/fortnite.png.webp"
+                    alt="Top eSports titles"> </div>
+        </div>
+    </div>
+</section> -->
+<section>
+    <div class="easy-setup-main">
+        <div class="easy-setup-col1-photo"><img src="assets/VRNL 1-1_11zon.webp"
+                alt="setup and creation of the online networks"> </div>
+        <div class="easy-setup-col2">
+            <h3>Easy setup, less than you might imagine.</h3>
+            <p>We can deliver the eSports platform in just a matter of weeks.<br> We handle all aspects of the process:
+                Hosting, User Interface, odds feed, customized pages, product activation, and sportsbook strategy.</p>
+            <p><strong>Your primary focus can be dedicated to setting up and establishing your online networks.</strong>
+            </p>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="esports-betting-middle-main">
+        <div class="esports-betting-middle-row1">
+            <div class="esport_bet_center">
+                <h2>If you're thinking about starting in online betting, our eSports betting software is a great first
+                    step.</h2>
+                <p>Take advantage of our expert services and advanced eSports betting technology. Our regulated partners
+                    get full support to enter the online betting industry and can use our customized or generic
+                    platforms.</p>
+                <p> Starting an online sportsbook that mainly focuses on eSports can be tough. That's why we've created
+                    a comprehensive eSports betting system with pre-match betting services. Our aim is to offer you the
+                    most extensive range of eSports options online.</p>
+            </div>
+        </div>
+        <div class="esports-betting-middle-row2"><img class="all_images" src="assets/vrnl image 10_11zon.webp"
+                alt="eSports Betting environmen"> </div>
+    </div>
+</section><app-footer></app-footer>
