--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -189,7 +189,7 @@ Online player, register your game account online or at a shop, place bets.
                       <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <p>
-                            Our core business is the Sports Betting, in fact our sports betting software is an in-house product and it has been developed by our IT team since 2005. In addition to the Sport product we also offer live betting, casino, live casino, lotteries and virtual games so as to offer "all in one" solutions to our customers.
+                            Our core business is the Sports Betting, in fact our sports betting software is an in-house product and it has been developed by our IT team since 2020. In addition to the Sport product we also offer live betting, casino, live casino, lotteries and virtual games so as to offer "all in one" solutions to our customers.
                            </p>
 
                         </div>
@@ -388,9 +388,8 @@ Online player, register your game account online or at a shop, place bets.
                       <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <p>
-                            Yes, indeed our eSports betting platform network is based on 3 levels:
+                            Yes, VRNL is fully optimized for mobile use. Our platform is designed to work seamlessly on all smartphones and tablets, giving you access to sports exchange, casino games, iGaming, and eSports anytime, anywhere. You can enjoy a smooth, responsive interface, fast loading times, and secure transactions directly from your mobile browser—no app download required. Whether you’re on Android or iOS, the experience is fast, user-friendly, and just as feature-rich as the desktop version.s
                           </p>
-                          <ol  style="text-align: start; margin: 9px; font-size: 16px;"><li ><strong >Platform administrator</strong> - the access to the backend (it is also possible to create other accesses to the Back office with limited privileges and permissions). </li><li ><strong >Cashier</strong> the profile for the betting shops's employees, able to place bets without earning any commissions.</li><li ><strong > Online player,</strong> register your game account online or at a shop, place bets. </li></ol>
                         </div>
                       </div>
                     </div>
