--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -102,7 +102,7 @@
           <li><span>Mobile Number</span></li>
         </ul>
         <br>
-        <strong>c. User portfolio details</strong><br>
+        <!-- <strong>c. User portfolio details</strong><br>
         In addition to the above mentioned information, the user may also create a "Portfolio" by providing the
         financial details regarding the following:
         <ul class="privacy_list clearfix">
@@ -121,8 +121,8 @@
           <li><span>Providing recommendations and daily alerts to the user</span></li>
           <li><span>Customization of content on the website for enhanced user experience</span></li>
         </ul>
-        <br>
-        <strong>d. Mobile device permissions</strong><br>
+        <br> -->
+        <strong>c. Mobile device permissions</strong><br>
         When accessing our application on mobile devices/ tablets/ TVs or any other device having access of the said
         application, we may request and gain access to the following:
         <ul class="privacy_list clearfix">
@@ -278,7 +278,7 @@
             as applicable by the local laws.
           </div>
           <br>
-          <div>
+          <!-- <div>
             <strong>d. Auto renewal Subscription</strong><br>
             When you chose any subscription or paid service, we or our payment gateway provider may collect your
             purchase, address or billing information, including your credit card number and expiration date etc. However
@@ -287,9 +287,9 @@
             to auto-renew your subscription, you may cancel your subscription before the end of the subscription term.
             We do not capture/store any personal payment information with us.
           </div>
-          <br>
+          <br> -->
           <div>
-            <strong>e. Information from other Sources</strong><br>
+            <strong>d. Information from other Sources</strong><br>
             We may receive information about you from other sources, add it to our account information and treat it in
             accordance with this policy. If you provide information to the platform provider or other partner, whom we
             provide services, your account information and order information may be passed on to us. We may obtain
