--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -4,11 +4,7 @@
         <div class="sportsbetting-section1-col1">
             <h1 style=" font-family: Raleway, sans-serif; font-weight: 200; font-size: 45px; "> Sports <strong> Betting
                     Software </strong> </h1>
-            <p> Are you ready to take your sports betting endeavors to the next level? Look no further than VRNL's
-                sports betting software! In this article, we'll delve deep into the world of sports betting, exploring
-                how VRNL's cutting-edge software can elevate your betting experience. With over two decades of expertise
-                in the industry, VRNL is your trusted partner for sports betting solutions. Join us as we embark on an
-                exciting journey into the realm of sports betting software. </p>
+            <p> Ready to take your sports betting experience to the next level? Look no further than VRNL Sports Betting Software! In this article, we’ll explore how VRNL’s cutting-edge technology can transform the way you bet. With over two decades of industry expertise, VRNL is your trusted partner for innovative sports betting solutions. Let’s dive into the world of sports betting software and discover how we can elevate your game. </p>
             <p> VRNL's Sports Betting Software offers a world of possibilities for sports enthusiasts and bettors. With
                 a focus on providing accurate, relevant, and helpful information, VRNL combines subject-matter expertise
                 and personal experiences to create a comprehensive betting solution. Trust VRNL to elevate your sports
