--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -32,7 +32,7 @@
                                         <p><span style="font-weight: 400;">Slot machine</span></p>
                                     </td>
                                     <td>
-                                        <p><span style="font-weight: 400;">More than de 10</span><span
+                                        <p><span style="font-weight: 400;">More than 10</span><span
                                                 style="font-weight: 400;">.000</span></p>
                                     </td>
                                 </tr>
@@ -41,7 +41,7 @@
                                         <p><span style="font-weight: 400;">Table Games</span></p>
                                     </td>
                                     <td>
-                                        <p><span style="font-weight: 400;">More than de 4</span><span
+                                        <p><span style="font-weight: 400;">More than 4</span><span
                                                 style="font-weight: 400;">40</span></p>
                                     </td>
                                 </tr>
@@ -51,7 +51,7 @@
                                     </td>
                                     <td>
                                         <p><span style="font-weight: 400;">More than </span><span
-                                                style="font-weight: 400; font-family: 'Raleway', sans-serif;">de
+                                                style="font-weight: 400; font-family: 'Raleway', sans-serif;">
                                                 3</span><span style="font-weight: 400;">25</span></p>
                                     </td>
                                 </tr>
@@ -60,7 +60,7 @@
                                         <p><span style="font-weight: 400;">Lottery</span></p>
                                     </td>
                                     <td>
-                                        <p><span style="font-weight: 400;">More than de 9</span><span
+                                        <p><span style="font-weight: 400;">More than 9</span><span
                                                 style="font-weight: 400;">0</span></p>
                                     </td>
                                 </tr>
@@ -68,7 +68,7 @@
                                     <td>
                                         <p><span style="font-weight: 400;">PROVEEDORES</span></p>
                                     </td>
-                                    <td><span style="font-weight: 400;">More than de 12</span><span
+                                    <td><span style="font-weight: 400;">More than 12</span><span
                                             style="font-weight: 400;">0</span></td>
                                 </tr>
                             </tbody>
