--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -40,7 +40,7 @@
                         <p class="text4" >SUPPLIERS</p>
                     </div>
                     <div class="col_2_4">
-                            <p class="text_3-4">More than de 20</p>
+                            <p class="text_3-4">More than 20</p>
                     </div>         
                 </div>
                <div class="table-col">
