--- a/src/app/our-theme/modal-form/demo-request.component.css
+++ b/src/app/our-theme/modal-form/demo-request.component.css
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     z-index: 1050;
+    top: 40px;
 }
 
 .modal-content {
@@ -295,4 +296,18 @@
     height: 20px;
     width: auto;
     pointer-events: none;
+}
+@media (max-width:767px) {
+    .modal {
+        top: 0;
+    }
+    .form-title{
+        font-size: 25px;
+        text-align: left;
+    }
+    .close-btn{
+        top: 24px;
+        right: 16px;
+        width: 40px;
+    }
 }
