--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -262,7 +262,7 @@
           </div>
 
           <br>
-          <div>
+          <!-- <div>
             <strong>c. Financial Information</strong><br>
             For provision of services and subscriptions, you may be required to present additional financial or
             sensitive personal information to our partners, on their respective websites (e.g. PAN card details for
@@ -278,7 +278,7 @@
             as applicable by the local laws.
           </div>
           <br>
-          <!-- <div>
+          <div>
             <strong>d. Auto renewal Subscription</strong><br>
             When you chose any subscription or paid service, we or our payment gateway provider may collect your
             purchase, address or billing information, including your credit card number and expiration date etc. However
@@ -287,7 +287,7 @@
             to auto-renew your subscription, you may cancel your subscription before the end of the subscription term.
             We do not capture/store any personal payment information with us.
           </div>
-          <br> -->
+          <br>
           <div>
             <strong>d. Information from other Sources</strong><br>
             We may receive information about you from other sources, add it to our account information and treat it in
@@ -297,7 +297,7 @@
             communicate with you. Demographic and purchase information: We may reference other sources of demographic
             and other information in order to provide you with more targeted communications and promotions, based on the
             consents provided by you.
-          </div>
+          </div> -->
         </ul>
      
 
