--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -560,6 +560,23 @@ The proper management of a eSports betting platform can make this business highl
                         </div>
                       </div>
                     </div>
+
+
+
+                     <div clas="accordion-item">
+                      <h2 class="accordion-header" id="heading23">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse23" aria-expanded="false" aria-controls="collapse23">
+                          Is the platform mobile-friendly?
+                        </button>
+                      </h2>
+                      <div id="collapse23" class="accordion-collapse collapse" aria-labelledby="heading23" data-bs-parent="#accordionExampleStreaming">
+                        <div class="accordion-body">
+                          <p>
+                           Yes — our platform is fully mobile-friendly, and we provide an APK that you can download and use seamlessly.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -795,6 +812,20 @@ The proper management of a eSports betting platform can make this business highl
                         <div class="accordion-body">
                           <p>
                             Get in touch with our sales team to discuss your needs and get a personalized consultation. We'll guide you through the process of setting up your White Label Casino.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                                        <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingt105">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse105" aria-expanded="true" aria-controls="collapse105">
+                         Can I customize the casino with my branding?
+                        </button>
+                      </h2>
+                      <div id="collapse105" class="accordion-collapse collapse" aria-labelledby="heading105" data-bs-parent="#accordionExample100">
+                        <div class="accordion-body">
+                          <p>
+                           Yes — you can fully customize the casino with your own logo, colors, and branding to match your identity.
                           </p>
                         </div>
                       </div>
