--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -25,7 +25,7 @@
                         user-friendly and designed for easy implementation with our live casino API.</b></p>
                 <h3 class="demo-live"><strong> Demo live casino solutions</strong></h3> <a class="demo-link"
                     href="https://baji.vrnlexch.com/#/" target="_blank">
-                    <p> https://baji.vrnlexch.com/#/</p>
+                    <p>baji.vrnlexch.com</p>
                 </a>
             </div>
             <div class="index2-col2">
