--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -36,8 +36,7 @@
             <div class=platform_col>
                 <h2 class=platform_header><i class="fa-regular fa-hand-point-right fa-fade fa-2xs"
                         style=color:#ec0200;padding-top:15px></i><a href="https://vrnlexch.com/" target=_blank
-                        class="gradient-text blink-soft"> Transform Your Experience with Advanced Sports Betting
-                        Software Solutions</a></h2>
+                        class="gradient-text blink-soft"> Enhance Your Experience with Advanced Sports Betting Software</a></h2>
                 <p class=platform_para>Modern sports betting software solutions are <b>transforming</b> how bettors
                     engage with the game. Featuring <b> seamless interfaces,</b> real-time analytics, and live wagering
                     capabilities, these platforms deliver a superior betting experience for both newcomers and seasoned
@@ -55,11 +54,11 @@
                 </p>
                 <h3 class=header_plat>Explore our advanced B2B Betting software</h3><a class=platform_anchor
                     href="https://skyexch.vrnlexch.com/ " target=_blank>
-                    <p> https://skyexch.vrnlexch.com/ </p>
+                    <p>https://skyexch.vrnlexch.com/ </p>
                 </a>
                 <h3 class=header_plat>Explore our advanced B2C Betting software</h3><a class=platform_anchor
-                    href="https://mostvipgame.vrnlexch.com/m/" target=_blank>
-                    <p>https://mostvipgame.vrnlexch.com/m/</p>
+                    href="https://cx.vrnlexch.com/#/" target=_blank>
+                    <p>https://cx.vrnlexch.com/</p>
                 </a><br><button class="button_slide slide_right" (click)=scrollToContact() routerLink="/contact"><i
                         class="fa-solid fa-phone"></i> Contact us!</button>
             </div>
@@ -209,9 +208,9 @@
         <div class=starting_row>
             <div class=start_details>
                 <h2 class=start_header>Before you begin, explore it in action!</h2>
-                <p class=start_para>on our demo platform:</p><a href="https://www.lc247.co/" target=_blank
+                <p class=start_para>on our demo platform:</p><a href="https://cxwelcome.live/#/" target=_blank
                     style=color:#a0c528>
-                    <p class=start_a> https://www.lc247.co/ </p>
+                    <p class=start_a> https://cxwelcome.live/#/ </p>
                 </a>
             </div>
         </div>
