--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -21,7 +21,7 @@
                 <h3 class="online-casino-em"> <em style="font-family: 'Raleway', sans-serif">This is a theme and can be
                         customized, see it in action:</em> </h3> <a class="online-casino-link"
                     href="https://babu365.vrnlexch.com/#/" target="_blank">
-                    <p style="color: #a0c528; font-weight: bold;">https://babu365.vrnlexch.com/#/</p>
+                    <p style="color: #a0c528; font-weight: bold;">babu365.vrnlexch.com</p>
                 </a> <br /> <button class="online-casino-button" routerLink="/contact"> <i
                         class="fa-solid fa-phone"></i> Contact us! </button>
             </div>
