--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -27,7 +27,7 @@
                 <p class="onther_p1">This theme is highly customizable, and you can experience its flexibility in
                     action:</p>
                 <p class="onther_a"><a href=" https://skyexch.vrnlexch.com/#/dash" target="_blank" class="lc247"><strong>
-                    https://skyexch.vrnlexch.com/#/dash </strong></a></p>
+                    View Demo </strong></a></p>
             </div>
             <div class="onther_btn"><button class="hover-1_1 otn_s_1 button_slide slide_right" routerLink="/contact"><i
                         class="fa-solid fa-phone"></i> Contact us!</button> </div>
