--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -12,10 +12,10 @@
             <p> Explore VRNL's sports betting software today and elevate your betting game to the next level!</p>
             <h3>Try our B2B Betting software</h3>
             <div class="sportsbetting-section1-col1-link"> <a href="https://skyexch.vrnlexch.com/m/#/dash" target="_blank"
-                    style="font-size: 16px">https://skyexch.vrnlexch.com/m/#/dash</a></div>
+                    style="font-size: 16px">skyexch.vrnlexch.com</a></div>
             <h3>Try our B2C Betting software</h3>
             <div class="sportsbetting-section1-col1-link"> <a href="https://babu365.vrnlexch.com/#/" target="_blank"
-                    style="font-size: 16px">https://babu365.vrnlexch.com/#/</a> </div>
+                    style="font-size: 16px">babu365.vrnlexch.com</a> </div>
             <div class="sportsbetting-section1-button"> <button routerLink="/contact" class="animated-button">Book a
                     Demo</button> </div>
         </div>
