--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -12,7 +12,7 @@
             <p></p> <em class="white_c_param">Before you take the plunge, we invite you to witness its seamless
                 operation in action.</em>
             <p class="whitw_a"><a href="https://cx.vrnlexch.com/#/" target="_blank"
-                    class="fontcolor">https://cx.vrnlexch.com/#/</a></p>
+                    class="fontcolor">https://cx.vrnlexch.com</a></p>
         </div>
         <div class="white_casino_col_1 ">
             <div class="white_casino_v"> <img src="assets/look-girl-art-hall-wallpaper-preview.jpg"
