--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -350,7 +350,7 @@ Online player, register your game account online or at a shop, place bets.
 
 
 <!-- vrnl question for esport start -->
-<section>
+<!-- <section>
   <div id="accordionExample" class="x-section e255-e74 m73-0 m73-3 m73-7 accordion">
     <div class="x-row x-container max width e255-e78 m73-9 m73-a m73-c m73-d m73-g m73-k m73-l m73-z">
       <div class="x-row-inner">
@@ -498,7 +498,7 @@ The proper management of a eSports betting platform can make this business highl
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- vrnl question for esport end -->
 
 <!-- vrnl question for playstreaming start -->
